button not complete

--- a/index.html
+++ b/index.html
@@ -17,42 +17,42 @@
         <h1>CSS Gradients</h1>
         <div class="wrapper">
             <div class="card">
-                <div class="box"></div>
+                <div class="box box--wind"></div>
                 <h2>Sunrise</h2>
                 <hr>
-                <button>Button</button>
+                <button  class="box--wind wrapper--mini_Title">Button</button>
             </div>
             <div class="card ">
-                <div class="box "></div>
+                <div class="box  box--ice "></div>
                 <h2>Frost</h2>
                 <hr>
-                <button>Button</button>
+                <button class="box--ice wrapper--mini_Title">Button</button>
             </div>
             <div class="card">
-                <div class="box"></div>
+                <div class="box box--flame"></div>
                 <h2>Lime</h2>
                 <hr>
-                <button>Button</button>
+                <button  class="box--flame wrapper--mini_Title">Button</button>
             </div>
         </div>
         <h1>The Team</h1>
-        <div class="wrapper">
-            <div class="card-horizontal">
+        <div class="wrapper wrapper--mini_Title">
+            <div class="card-horizontal box--wind">
                 <h3>Lorem</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, nam!</p>
+                <p class="wrapper--mini_Title__p_size">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, nam!</p>
             </div>
-            <div class="card-horizontal">
+            <div class="card-horizontal box--flame">
                 <h3>Lorem</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, nam!</p>
+                <p  class="wrapper--mini_Title__p_size">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, nam!</p>
             </div>
-            <div class="card-horizontal">
+            <div class="card-horizontal box--ice">
 
                 <h3>Lorem</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, nam!</p>
+                <p  class="wrapper--mini_Title__p_size">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, nam!</p>
             </div>
-            <div class="card-horizontal">
+            <div class="card-horizontal box--wind">
                 <h3>Lorem</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, nam!</p>
+                <p  class="wrapper--mini_Title__p_size">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, nam!</p>
             </div>
         </div>
     </div>
